libreswan-3.9/OBJ.linux.arm/lib/libipsecconf/parser.output
State 2 conflicts: 2 shift/reduce, 4 reduce/reduce


Grammar

    0 $accept: config_file $end

    1 config_file: blanklines versionstmt blanklines sections
    2            | blanklines sections

    3 versionstmt: /* empty */
    4            | VERSION STRING EOL
    5            | VERSION INTEGER EOL

    6 blanklines: /* empty */
    7           | blanklines EOL
    8           | blanklines FIRST_SPACES EOL

    9 sections: /* empty */
   10         | sections section_or_include

   11 $@1: /* empty */

   12 section_or_include: CONFIG SETUP EOL $@1 kw_sections

   13 $@2: /* empty */

   14 section_or_include: CONN STRING EOL $@2 kw_sections
   15                   | INCLUDE STRING EOL

   16 kw_sections: kw_sections kw_section
   17            | /* empty */

   18 kw_section: FIRST_SPACES statement_kw EOL

   19 statement_kw: KEYWORD EQUAL KEYWORD
   20             | COMMENT EQUAL STRING
   21             | KEYWORD EQUAL STRING
   22             | BOOLWORD EQUAL BOOL
   23             | KEYWORD EQUAL INTEGER
   24             | TIMEWORD EQUAL STRING
   25             | PERCENTWORD EQUAL STRING
   26             | KEYWORD EQUAL BOOL
   27             | KEYWORD EQUAL


Terminals, with rules where they appear

$end (0) 0
error (256)
EQUAL (258) 19 20 21 22 23 24 25 26 27
FIRST_SPACES (259) 8 18
EOL (260) 4 5 7 8 12 14 15 18
CONFIG (261) 12
SETUP (262) 12
CONN (263) 14
INCLUDE (264) 15
VERSION (265) 4 5
STRING (266) 4 14 15 20 21 24 25
INTEGER (267) 5 23
BOOL (268) 22 26
KEYWORD (269) 19 21 23 26 27
TIMEWORD (270) 24
BOOLWORD (271) 22
PERCENTWORD (272) 25
COMMENT (273) 20


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
config_file (20)
    on left: 1 2, on right: 0
versionstmt (21)
    on left: 3 4 5, on right: 1
blanklines (22)
    on left: 6 7 8, on right: 1 2 7 8
sections (23)
    on left: 9 10, on right: 1 2 10
section_or_include (24)
    on left: 12 14 15, on right: 10
$@1 (25)
    on left: 11, on right: 12
$@2 (26)
    on left: 13, on right: 14
kw_sections (27)
    on left: 16 17, on right: 12 14 16
kw_section (28)
    on left: 18, on right: 16
statement_kw (29)
    on left: 19 20 21 22 23 24 25 26 27, on right: 18


state 0

    0 $accept: . config_file $end

    $default  reduce using rule 6 (blanklines)

    config_file  go to state 1
    blanklines   go to state 2


state 1

    0 $accept: config_file . $end

    $end  shift, and go to state 3


state 2

    1 config_file: blanklines . versionstmt blanklines sections
    2            | blanklines . sections
    7 blanklines: blanklines . EOL
    8           | blanklines . FIRST_SPACES EOL

    FIRST_SPACES  shift, and go to state 4
    EOL           shift, and go to state 5
    VERSION       shift, and go to state 6

    $end          reduce using rule 3 (versionstmt)
    $end          [reduce using rule 9 (sections)]
    FIRST_SPACES  [reduce using rule 3 (versionstmt)]
    EOL           [reduce using rule 3 (versionstmt)]
    CONFIG        reduce using rule 3 (versionstmt)
    CONFIG        [reduce using rule 9 (sections)]
    CONN          reduce using rule 3 (versionstmt)
    CONN          [reduce using rule 9 (sections)]
    INCLUDE       reduce using rule 3 (versionstmt)
    INCLUDE       [reduce using rule 9 (sections)]
    $default      reduce using rule 3 (versionstmt)

    versionstmt  go to state 7
    sections     go to state 8


state 3

    0 $accept: config_file $end .

    $default  accept


state 4

    8 blanklines: blanklines FIRST_SPACES . EOL

    EOL  shift, and go to state 9


state 5

    7 blanklines: blanklines EOL .

    $default  reduce using rule 7 (blanklines)


state 6

    4 versionstmt: VERSION . STRING EOL
    5            | VERSION . INTEGER EOL

    STRING   shift, and go to state 10
    INTEGER  shift, and go to state 11


state 7

    1 config_file: blanklines versionstmt . blanklines sections

    $default  reduce using rule 6 (blanklines)

    blanklines  go to state 12


state 8

    2 config_file: blanklines sections .
   10 sections: sections . section_or_include

    CONFIG   shift, and go to state 13
    CONN     shift, and go to state 14
    INCLUDE  shift, and go to state 15

    $default  reduce using rule 2 (config_file)

    section_or_include  go to state 16


state 9

    8 blanklines: blanklines FIRST_SPACES EOL .

    $default  reduce using rule 8 (blanklines)


state 10

    4 versionstmt: VERSION STRING . EOL

    EOL  shift, and go to state 17


state 11

    5 versionstmt: VERSION INTEGER . EOL

    EOL  shift, and go to state 18


state 12

    1 config_file: blanklines versionstmt blanklines . sections
    7 blanklines: blanklines . EOL
    8           | blanklines . FIRST_SPACES EOL

    FIRST_SPACES  shift, and go to state 4
    EOL           shift, and go to state 5

    $default  reduce using rule 9 (sections)

    sections  go to state 19


state 13

   12 section_or_include: CONFIG . SETUP EOL $@1 kw_sections

    SETUP  shift, and go to state 20


state 14

   14 section_or_include: CONN . STRING EOL $@2 kw_sections

    STRING  shift, and go to state 21


state 15

   15 section_or_include: INCLUDE . STRING EOL

    STRING  shift, and go to state 22


state 16

   10 sections: sections section_or_include .

    $default  reduce using rule 10 (sections)


state 17

    4 versionstmt: VERSION STRING EOL .

    $default  reduce using rule 4 (versionstmt)


state 18

    5 versionstmt: VERSION INTEGER EOL .

    $default  reduce using rule 5 (versionstmt)


state 19

    1 config_file: blanklines versionstmt blanklines sections .
   10 sections: sections . section_or_include

    CONFIG   shift, and go to state 13
    CONN     shift, and go to state 14
    INCLUDE  shift, and go to state 15

    $default  reduce using rule 1 (config_file)

    section_or_include  go to state 16


state 20

   12 section_or_include: CONFIG SETUP . EOL $@1 kw_sections

    EOL  shift, and go to state 23


state 21

   14 section_or_include: CONN STRING . EOL $@2 kw_sections

    EOL  shift, and go to state 24


state 22

   15 section_or_include: INCLUDE STRING . EOL

    EOL  shift, and go to state 25


state 23

   12 section_or_include: CONFIG SETUP EOL . $@1 kw_sections

    $default  reduce using rule 11 ($@1)

    $@1  go to state 26


state 24

   14 section_or_include: CONN STRING EOL . $@2 kw_sections

    $default  reduce using rule 13 ($@2)

    $@2  go to state 27


state 25

   15 section_or_include: INCLUDE STRING EOL .

    $default  reduce using rule 15 (section_or_include)


state 26

   12 section_or_include: CONFIG SETUP EOL $@1 . kw_sections

    $default  reduce using rule 17 (kw_sections)

    kw_sections  go to state 28


state 27

   14 section_or_include: CONN STRING EOL $@2 . kw_sections

    $default  reduce using rule 17 (kw_sections)

    kw_sections  go to state 29


state 28

   12 section_or_include: CONFIG SETUP EOL $@1 kw_sections .
   16 kw_sections: kw_sections . kw_section

    FIRST_SPACES  shift, and go to state 30

    $default  reduce using rule 12 (section_or_include)

    kw_section  go to state 31


state 29

   14 section_or_include: CONN STRING EOL $@2 kw_sections .
   16 kw_sections: kw_sections . kw_section

    FIRST_SPACES  shift, and go to state 30

    $default  reduce using rule 14 (section_or_include)

    kw_section  go to state 31


state 30

   18 kw_section: FIRST_SPACES . statement_kw EOL

    KEYWORD      shift, and go to state 32
    TIMEWORD     shift, and go to state 33
    BOOLWORD     shift, and go to state 34
    PERCENTWORD  shift, and go to state 35
    COMMENT      shift, and go to state 36

    statement_kw  go to state 37


state 31

   16 kw_sections: kw_sections kw_section .

    $default  reduce using rule 16 (kw_sections)


state 32

   19 statement_kw: KEYWORD . EQUAL KEYWORD
   21             | KEYWORD . EQUAL STRING
   23             | KEYWORD . EQUAL INTEGER
   26             | KEYWORD . EQUAL BOOL
   27             | KEYWORD . EQUAL

    EQUAL  shift, and go to state 38


state 33

   24 statement_kw: TIMEWORD . EQUAL STRING

    EQUAL  shift, and go to state 39


state 34

   22 statement_kw: BOOLWORD . EQUAL BOOL

    EQUAL  shift, and go to state 40


state 35

   25 statement_kw: PERCENTWORD . EQUAL STRING

    EQUAL  shift, and go to state 41


state 36

   20 statement_kw: COMMENT . EQUAL STRING

    EQUAL  shift, and go to state 42


state 37

   18 kw_section: FIRST_SPACES statement_kw . EOL

    EOL  shift, and go to state 43


state 38

   19 statement_kw: KEYWORD EQUAL . KEYWORD
   21             | KEYWORD EQUAL . STRING
   23             | KEYWORD EQUAL . INTEGER
   26             | KEYWORD EQUAL . BOOL
   27             | KEYWORD EQUAL .

    STRING   shift, and go to state 44
    INTEGER  shift, and go to state 45
    BOOL     shift, and go to state 46
    KEYWORD  shift, and go to state 47

    $default  reduce using rule 27 (statement_kw)


state 39

   24 statement_kw: TIMEWORD EQUAL . STRING

    STRING  shift, and go to state 48


state 40

   22 statement_kw: BOOLWORD EQUAL . BOOL

    BOOL  shift, and go to state 49


state 41

   25 statement_kw: PERCENTWORD EQUAL . STRING

    STRING  shift, and go to state 50


state 42

   20 statement_kw: COMMENT EQUAL . STRING

    STRING  shift, and go to state 51


state 43

   18 kw_section: FIRST_SPACES statement_kw EOL .

    $default  reduce using rule 18 (kw_section)


state 44

   21 statement_kw: KEYWORD EQUAL STRING .

    $default  reduce using rule 21 (statement_kw)


state 45

   23 statement_kw: KEYWORD EQUAL INTEGER .

    $default  reduce using rule 23 (statement_kw)


state 46

   26 statement_kw: KEYWORD EQUAL BOOL .

    $default  reduce using rule 26 (statement_kw)


state 47

   19 statement_kw: KEYWORD EQUAL KEYWORD .

    $default  reduce using rule 19 (statement_kw)


state 48

   24 statement_kw: TIMEWORD EQUAL STRING .

    $default  reduce using rule 24 (statement_kw)


state 49

   22 statement_kw: BOOLWORD EQUAL BOOL .

    $default  reduce using rule 22 (statement_kw)


state 50

   25 statement_kw: PERCENTWORD EQUAL STRING .

    $default  reduce using rule 25 (statement_kw)


state 51

   20 statement_kw: COMMENT EQUAL STRING .

    $default  reduce using rule 20 (statement_kw)
